<resources>
    <string name="app_name">Calculator</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_pm">+/-</string>
    <string name="_point">.</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="um">X</string>
    <string name="rd">/</string>
    <string name="rv">=</string>
    <string name="back">--</string>
    <string name="proc">%</string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="backspase"><![CDATA[<—]]></string>
    <string name="umn">*</string>

    <string name="OK">OK</string>
    <string name="Cancel">CANCEL</string>

    <string name="theme_dark">Dark</string>
    <string name="theme_green">Green</string>
    <string name="theme_broun">Broun</string>

</resources>